# california-water-reservoir-tk

./: .gitignore  Cargo.toml  README.md  flake.nix  run.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: Dockerfile.artifact  dependabot.yml
.github/workflows/: build.yml  test-actions.yml
cdec/: Cargo.toml
cdec/src/: compression.rs  date_range.rs  error.rs  lib.rs  normalized_naive_date.rs  observable.rs  observation.rs  reservoir.rs  reservoir_observations.rs  survey.rs  water_year.rs
chart-cumulative-water/: Cargo.toml  Dioxus.toml  build.rs
chart-cumulative-water/src/: main.rs
chart-local-reservoirs/: Cargo.toml  Dioxus.toml  build.rs
chart-local-reservoirs/src/: main.rs
chart-reservoir-history/: Cargo.toml  Dioxus.toml  build.rs
chart-reservoir-history/src/: main.rs
chart-snow-history/: Cargo.toml  Dioxus.toml
chart-snow-history/src/: main.rs
chart-snow-years/: Cargo.toml  Dioxus.toml  build.rs
chart-snow-years/src/: main.rs
chart-total-snow/: Cargo.toml  Dioxus.toml  build.rs
chart-total-snow/src/: main.rs
chart-total-water/: Cargo.toml  Dioxus.toml  build.rs
chart-total-water/src/: main.rs
chart-water-years/: Cargo.toml  Dioxus.toml  build.rs
chart-water-years/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs  run.rs
cli/src/cmd/: query.rs
cli/src/error/: error.rs
cli/src/log/: log.rs
cmd/: Cargo.toml
cmd/src/: lib.rs
cmd/src/peruse/: mod.rs
cmd/src/query/: mod.rs  query.rs
cmd/src/run/: mod.rs  run.rs
cmd/src/survey/: mod.rs  survey.rs
cwr-cdec/: Cargo.toml
cwr-cdec/src/: date_range.rs  lib.rs  normalized_naive_date.rs  observable.rs  observation.rs  reservoir.rs  snow_station.rs  survey.rs  water_year.rs
cwr-chart-ui/: Cargo.toml
cwr-chart-ui/assets/js/: data-table.js  line-chart.js  multi-line-chart.js  tooltip.js  water-years-chart.js
cwr-chart-ui/src/: js_bridge.rs  lib.rs  state.rs
cwr-chart-ui/src/components/: chart_container.rs  chart_header.rs  date_range_picker.rs  error_display.rs  loading_spinner.rs  mod.rs  reservoir_selector.rs  snow_station_selector.rs  sort_selector.rs
cwr-cli/: Cargo.toml
cwr-cli/src/: main.rs
cwr-cmd/: Cargo.toml
cwr-cmd/src/: incremental.rs  lib.rs  query.rs  split.rs
cwr-data/: Cargo.toml
cwr-data/src/: codec.rs  lib.rs
cwr-db/: Cargo.toml
cwr-db/src/: lib.rs  loader.rs  models.rs  queries.rs  schema.rs
cwr-utils/: Cargo.toml
cwr-utils/src/: lib.rs
dioxus-cdec/: Cargo.toml  Dioxus.toml  README.md  build_db.py  build_json.py  index.html
dioxus-cdec/assets/: chart.js  normalized_chart.js
dioxus-cdec/data/: reservoir_data.db  reservoir_data.db.zst  reservoir_data.json  reservoir_data.json.zst
dioxus-cdec/src/: chart.rs  database.rs  main.rs
dioxus-cdec/src/components/: chart.rs  date_controls.rs  mod.rs  normalized_year_chart.rs  per_reservoir_chart.rs  reservoir_selector.rs  water_year_table.rs
docker-images/cwr-cli/: Dockerfile
ecco/: Cargo.toml  README.md
ecco/src/: calendar_year_model.rs  lib.rs  reservoir_observations.rs  water_level_observations.rs
fixtures/: capacity-no-powell-no-mead.csv  cumulative.csv  cumulative.tar.lzma  observations.tar.lzma  output.tar.lzma  reservoirs.tar.lzma  snow_observations.csv  snow_stations.csv
my_log/: Cargo.toml
my_log/src/: lib.rs
my_log/src/my_logger/: mod.rs
table-snow-stats/: Cargo.toml  Dioxus.toml  build.rs
table-snow-stats/src/: main.rs
table-water-year-stats/: Cargo.toml  Dioxus.toml  build.rs
table-water-year-stats/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/error/: error.rs  mod.rs
utils/src/run/: mod.rs
vectorize/: Cargo.toml
vectorize/src/: lib.rs
yew-avin-a-laf/: Cargo.toml  index.html
yew-avin-a-laf/examples/: drop_down.rs
yew-avin-a-laf/src/: lib.rs  main.rs  reservoir_drop_down_list.rs
yew-avin_a_laf/: Cargo.toml  index.html
yew-avin_a_laf/src/: main.rs
yew-da-best/: Cargo.toml  index.html
yew-da-best/src/: main.rs
yew-nani/: Cargo.toml  index.html
yew-nani/src/: main.rs
yew-tew/: Cargo.toml  index.html
yew-tew-old/: Cargo.toml  index.html
yew-tew-old/src/: main.rs
yew-tew/src/: main.rs
yew-wot-m8/: Cargo.toml  index.html
yew-wot-m8/src/: main.rs  model.rs
yew-wot_m8/: Cargo.toml  README.md  index.html
yew-wot_m8/src/: main.rs
yew-wu/: Cargo.toml  index.html
yew-wu-v2/: Cargo.toml  index.html
yew-wu-v2/src/: main.rs
yew-wu/src/: main.rs
