[workspace]
members = [
    "cdec", 
    "cli",
    "cmd", 
    "ecco",
    "my_log",
    "utils",
    "vectorize",
    "yew-avin_a_laf", 
    "yew-nani",
    "yew-wot_m8", 
    "yew-wu",
    "yew-wu-v2",]
resolver = "2"

[workspace.package]
version = "1.2.0"

[patch.crates-io]
pathfinder_simd = { git = "https://github.com/servo/pathfinder.git", rev = "e86d032" }

[profile.release]
debug = true
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
# lto = true
incremental = true
panic = "unwind"
strip = "none"
