[workspace]
members = [
    # Core libraries
    "cwr-cdec",
    "cwr-data",
    "cwr-db",
    "cwr-utils",
    "cwr-chart-ui",
    # CLI
    "cwr-cmd",
    "cwr-cli",
    # Water chart apps
    "chart-total-water",
    "chart-water-years",
    "chart-reservoir-history",
    "table-water-year-stats",
    "chart-local-reservoirs",
    "chart-cumulative-water",
    # Snow chart apps
    "chart-total-snow",
    "chart-snow-years",
    "chart-snow-history",
    "table-snow-stats",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"

[profile.release]
opt-level = 3
overflow-checks = false
incremental = true
panic = "unwind"
strip = "symbols"

[workspace.dependencies]
# Core
chrono = { version = "0.4.39", features = ["serde"] }
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"

# Dioxus + WASM
dioxus = { version = "0.7.1", features = ["web"] }
dioxus-logger = "0.7.3"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
rusqlite = { version = "0.38", features = ["bundled"] }

# CLI / Native
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.42", features = ["full", "tracing"] }
