[package]
name = "cdec"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
easy-cast = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
lzma-rs = { workspace = true }
plotters = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
vectorize = { path = "../vectorize" }
[dev-dependencies]
sha3 = "0.10.8"
hex-literal = "0.4.1"
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = {version="1.42.0", features=["macros"]}
