[package]
name = "chart-cumulative-water"
version.workspace = true
edition.workspace = true
description = "Cumulative California Water Storage"

[dependencies]
cwr-chart-ui = { path = "../cwr-chart-ui" }
cwr-db = { path = "../cwr-db" }
cwr-cdec = { path = "../cwr-cdec" }
dioxus = { workspace = true }
dioxus-logger = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
# Used to fetch every station's per-station observation file concurrently
# (`join_all`) before loading them into the DB.
futures = "0.3"

[build-dependencies]
csv = { workspace = true }
