[package]
name = "chart-snow-history"
version.workspace = true
edition.workspace = true
description = "Historical Snow Water Equivalent by Sensor"

[dependencies]
cwr-chart-ui = { path = "../cwr-chart-ui" }
cwr-db = { path = "../cwr-db" }
cwr-cdec = { path = "../cwr-cdec" }
dioxus = { workspace = true }
dioxus-logger = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[build-dependencies]
csv = { workspace = true }
