[package]
name = "cli"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd = { path = "../cmd" }
clap = { version = "4.5.23", features = ["derive"] }
log = "0.4.22"
my_log = { path = "../my_log" }
tokio = { version = "1.42.0", features = ["full", "tracing"] }
utils = { path = "../utils" }
