[package]
name = "cli"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd = { path = "../cmd" }
clap = { workspace = true }
log = { workspace = true }
my_log = { path = "../my_log" }
tokio = { workspace = true }
utils = { path = "../utils" }
