[package]
name = "cmd"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdec = { path= "../cdec" }
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
csv = "1.3.1"
easy-cast = "0.5.2"
futures = "0.3.31"
log = "0.4.22"
reqwest = "0.12.9"
serde_cbor = "0.11.2"
utils = { path="../utils" }
