[package]
name = "cmd"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdec = { path= "../cdec" }
chrono = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
easy-cast = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde_cbor = { workspace = true }
utils = { path="../utils" }
