[package]
name = "cwr-db"
version.workspace = true
edition.workspace = true
description = "In-memory SQLite database layer for water and snow data"

[dependencies]
cwr-cdec = { path = "../cwr-cdec" }
rusqlite = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
