[package]
name = "dioxus-cdec"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["web"] }
dioxus-logger = "0.7"
rusqlite = { git = "https://github.com/trevyn/rusqlite", branch = "wasm32-unknown-unknown", features = ["bundled"] }
chrono = { version = "0.4.39", features = ["serde", "wasmbind"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"
zstd = "0.13"
log = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "console",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
