[package]
name = "ecco"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdec = { path = "../cdec" }
chrono = { version = "0.4.38", features = ["serde"] }
itertools = "0.13.0"
plotters = "0.3.7"
