[package]
name = "ecco"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdec = { path = "../cdec" }
chrono = { workspace = true }
itertools = { workspace = true }
plotters = { workspace = true }
