[package]
name = "my_log"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
chrono = "0.4.39"


[target.'cfg(target_family="wasm")'.dependencies]
gloo-console = { version = "0.3.0" }
js-sys = "0.3.76"

[target.'cfg(target_family="wasm")'.dependencies.web-sys]
version = "0.3.76"
features = [
  'console'
]
