[package]
name = "yew-avin-a-laf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdec = { path = "../cdec" }
chrono = { version = "0.4.22", features = ["serde"] }
easy-cast = "0.5.1"
ecco = { path = "../ecco" }
gloo-console = { version = "0.2.1" }
js-sys = "0.3.60"
log = "0.4.17"
plotters = "0.3.4"
wasm-bindgen = "0.2.83"
yew = { version = "0.20.0", features = ["csr"] }


[dependencies.web-sys]
version = "0.3.60"
features = [
  'Document',
  'Element',
  'HtmlSelectElement',
  'HtmlInputElement',
  'Window',
  'console'
]


[dev-dependencies]
cdec = { path = "../cdec" }
chrono = { version = "0.4.22", features = ["serde"] }
easy-cast = "0.5.1"
ecco = { path = "../ecco" }
gloo-console = { version = "0.2.1" }
js-sys = "0.3.60"
plotters = "0.3.4"
wasm-bindgen = "0.2.83"
yew = { version = "0.20.0", features = ["csr"] }
