[package]
name = "yew-avin_a_laf"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdec = { path = "../cdec" }
chrono = { version = "=0.4.26", features = ["serde"] }
ecco = { path = "../ecco" }
log = "=0.4.18"
my_log = { path = "../my_log" }
plotters = "=0.3.4"
wasm-bindgen = "=0.2.86"
yew = { version = "=0.20.0", features = ["csr"] }


[dependencies.web-sys]
version = "=0.3.63"
features = [
  'Document',
  'Element',
  'HtmlSelectElement',
  'HtmlInputElement',
  'Window',
  'console'
]


[dev-dependencies]
cdec = { path = "../cdec" }
chrono = { version = "=0.4.26", features = ["serde"] }
easy-cast = "=0.5.2"
ecco = { path = "../ecco" }
gloo-console = { version = "=0.2.3" }
js-sys = "=0.3.63"
plotters = "=0.3.4"
wasm-bindgen = "=0.2.86"
yew = { version = "0.20.0", features = ["csr"] }
