[package]
name = "yew-avin_a_laf"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdec = { path = "../cdec" }
chrono = { version = "0.4.39", features = ["serde"] }
ecco = { path = "../ecco" }
log = "0.4.22"
my_log = { path = "../my_log" }
plotters = "0.3.7"
wasm-bindgen = "0.2.99"
yew = { version = "0.21.0", features = ["csr"]}


[dependencies.web-sys]
version = "0.3.76"
features = [
  'Document',
  'Element',
  'HtmlSelectElement',
  'HtmlInputElement',
  'Window',
  'console'
]


[dev-dependencies]
cdec = { path = "../cdec" }
chrono = { version = "0.4.39", features = ["serde"] }
easy-cast = "0.5.3"
ecco = { path = "../ecco" }
gloo-console = { version = "0.3.0" }
js-sys = "0.3.76"
plotters = "0.3.7"
wasm-bindgen = "0.2.99"
yew = { version = "0.21.0", features = ["csr"]}
