[package]
name = "yew-nani"
version.workspace = true
edition = "2021"

[dependencies]
cdec = { path = "../cdec" }
chrono = "0.4.39"
ecco = { path = "../ecco" }
log = "0.4.22"
my_log = { path = "../my_log" }
wasm-bindgen = "0.2.99"
yew = { version = "0.21.0", features = ["csr"]}


[dependencies.web-sys]
version = "0.3.76"
features = [
  'Document',
  'HtmlSelectElement',
  'Window',
  'console'
]
