[package]
name = "yew-nani"
version.workspace = true
edition = "2021"

[dependencies]
cdec = { path = "../cdec" }
chrono = { workspace = true }
ecco = { path = "../ecco" }
log = { workspace = true }
my_log = { path = "../my_log" }
wasm-bindgen = { workspace = true }
yew = { workspace = true }
[dependencies.web-sys]
version = "0.3.76"
features = [
  'Document',
  'HtmlSelectElement',
  'Window',
  'console'
]
