[package]
name = "yew-tew"
edition = "2021"
version.workspace = true

[dependencies]
cdec = { path = "../cdec" }
chrono = { workspace = true }
ecco = { path = "../ecco" }
log = { workspace = true }
my_log = { path = "../my_log" }
plotters = { workspace = true }
wasm-bindgen = { workspace = true }
yew = { workspace = true }
[dependencies.web-sys]
version = "0.3.76"
features = [
  'Document',
  'Element',
  'HtmlSelectElement',
  'HtmlInputElement',
  'Window',
  'console'
]


[dev-dependencies]
cdec = { path = "../cdec" }
chrono = { version = "0.4.39", features = ["serde"] }
easy-cast = "0.5.3"
ecco = { path = "../ecco" }
gloo-console = { version = "0.3.0" }
js-sys = "0.3.76"
plotters = "0.3.7"
wasm-bindgen = "0.2.99"
yew = { version = "0.21.0", features = ["csr"]}