[package]
name = "yew-wot-m8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdec = { path = "../cdec" }
chrono = { version = "0.4.22", features = ["serde"] }
ecco = { path = "../ecco" }
gloo-console = { version = "0.2.1" }
js-sys = "0.3.60"
log = "0.4.17"
plotters = "0.3.4"
wasm-bindgen = "0.2.83"
yew = { version = "0.20.0", features = ["csr"] }
rayon = "1.6.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlSelectElement',
  'Window',
  'console'
]
