[package]
name = "yew-wot_m8"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdec = { path = "../cdec" }
chrono = { version = "0.4.35", features = ["serde"] }
ecco = { path = "../ecco" }
log = "0.4.21"
my_log = { path = "../my_log" }
plotters = "0.3.5"
wasm-bindgen = "0.2.92"
yew = { version = "0.21.0", features = ["csr"]}

[dependencies.web-sys]
version = "0.3.69"
features = [
  'Document',
  'Element',
  'HtmlSelectElement',
  'Window',
  'console'
]
