[package]
name = "yew-wot_m8"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdec = { path = "../cdec" }
chrono = { workspace = true }
ecco = { path = "../ecco" }
log = { workspace = true }
my_log = { path = "../my_log" }
plotters = { workspace = true }
wasm-bindgen = { workspace = true }
yew = { workspace = true }
[dependencies.web-sys]
version = "0.3.76"
features = [
  'Document',
  'Element',
  'HtmlSelectElement',
  'Window',
  'console'
]
