[package]
name = "yew-wu-v2"
version.workspace = true
edition = "2021"

[[bin]]
name="uwu"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
easy-cast = { workspace = true }
ecco = { path = "../ecco" }
log = { workspace = true }
my_log = { path = "../my_log" }
plotters = { workspace = true }
wasm-bindgen = { workspace = true }
yew = { workspace = true }
[dependencies.web-sys]
version = "0.3.76"
features = [
  'Document',
  'Element',
  'HtmlInputElement',
  'Window',
  'console'
]
