[package]
name = "yew-wu"
version.workspace = true
edition = "2021"

[[bin]]
name="uwu"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
easy-cast = "0.5.2"
ecco = { path = "../ecco" }
log = "0.4.20"
my_log = { path = "../my_log" }
plotters = "0.3.5"
wasm-bindgen = "0.2.87"
yew = { version = "0.21.0", features = ["csr"]}

[dependencies.web-sys]
version = "0.3.64"
features = [
  'Document',
  'Element',
  'HtmlInputElement',
  'Window',
  'console'
]
