[package]
name = "yew-wu"
version.workspace = true
edition = "2021"

[[bin]]
name="uwu"
path="src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
easy-cast = "0.5.2"
ecco = { path = "../ecco" }
log = "0.4.21"
my_log = { path = "../my_log" }
plotters = "0.3.6"
wasm-bindgen = "0.2.92"
yew = { version = "0.21.0", features = ["csr"]}

[dependencies.web-sys]
version = "0.3.69"
features = [
  'Document',
  'Element',
  'HtmlInputElement',
  'Window',
  'console'
]
